[package]
name = "learning-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.*"
ash-window = "0.10.*"
winit = "0.26.*"
vk-shader-macros = "0.2.*"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.2.3" } # Not on crates.io for some reason